Fix background of Marketo form section
* Use an SVG, stretched to 100% for the background.

--- a/source/assets_site/stylesheets/_index.css.scss
+++ b/source/assets_site/stylesheets/_index.css.scss
@@ -308,36 +308,22 @@ body.index {
 
   .section5 {
     background-color: #f8f8f8;
+    position: relative;
 
     > .inner {
       @include outer-container;
       padding: 5vh 0;
-    }
-
-    .contact-us {
-      float: right;
-      position: relative;
-      left: 50%;
-      width: 500px;
-      margin-top: 15%;
-    }
-
-    .contact-medium {
-      color: rgb(244, 118, 202);
-      font-weight: bold
-    }
-
-    .market {
-      margin-left: 30%;
-      padding: 0;
-      border: 0;
-      font: inherit;
-      font-size: 100%;
-      vertical-align: baseline;
-    }
-
-    .inner {
       display: inline-flex;
+    }
+
+    .background {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      background: image-url("index/section5/background.svg");
+      background-size: cover;
     }
 
     .header {
@@ -347,27 +333,41 @@ body.index {
       text-align: left;
     }
 
-    .cf_sign_on {
-      display: none;
+    .contact-us {
+      float: right;
+      position: relative;
+      left: 50%;
+      width: 500px;
+      margin-top: 15%;
+
+      .contact-medium {
+        color: rgb(244, 118, 202);
+        font-weight: bold
+      }
     }
 
-    .mktoLabel {
-      margin-bottom: 10px;
-    }
+    .marketo-form {
+      margin-left: 20%;
+      padding: 0;
+      border: 0;
+      font: inherit;
+      font-size: 100%;
+      vertical-align: baseline;
 
-    .contactus-triangle {
-      position: absolute;
-      width: 70vw;
-      height: 0;
-      border-color: transparent transparent rgb(244, 118, 202) transparent;
-      border-style: solid;
-      border-width: 0 25vw 85vh 0;
+      .cf_sign_on {
+        display: none;
+      }
+
+      .mktoLabel {
+        margin-bottom: 10px;
+      }
     }
   }
 
   .section6 {
     background-color: #f8f8f8;
     min-height: auto;
+
     > .inner {
       @include outer-container;
       padding: 0 0;
